// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StandardCard component renders given ID for standard card 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
    data-testid="test-card"
    id="test-card"
  >
    <div
      class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
      >
        <h3
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
          data-testid="test-card-header"
          id="test-card-header"
        >
          card title
        </h3>
      </div>
    </div>
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
      data-analyticsid="test-card-content"
      data-testid="test-card-content"
      id="test-card-content"
    />
  </div>
</DocumentFragment>
`;

exports[`StandardCard component renders with custom colours and full height 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-12pa2yt-MuiPaper-root-MuiCard-root"
    data-testid="standard-card-card-title"
    id="standard-card-card-title"
  >
    <div
      class="MuiCardHeader-root css-1k02kjq-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
      >
        <h3
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
          data-testid="standard-card-card-title-header"
          id="standard-card-card-title-header"
        >
          card title
        </h3>
      </div>
    </div>
    <div
      class="MuiCardContent-root css-1i9wt8r-MuiCardContent-root"
      data-analyticsid="standard-card-card-title-content"
      data-testid="standard-card-card-title-content"
      id="standard-card-card-title-content"
    />
  </div>
</DocumentFragment>
`;

exports[`StandardCard component renders with no title 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
    data-testid="standard-card-"
    id="standard-card-"
  >
    <div
      class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
      >
        <h3
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
          data-testid="standard-card--header"
          id="standard-card--header"
        />
      </div>
    </div>
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
      data-analyticsid="standard-card--content"
      data-testid="standard-card--content"
      id="standard-card--content"
    />
  </div>
</DocumentFragment>
`;

exports[`StandardCard component renders with small title and as a subcard 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
    data-testid="standard-card-card-title"
    id="standard-card-card-title"
  >
    <div
      class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
      >
        <h4
          class="MuiTypography-root MuiTypography-h6 MuiCardHeader-title css-7n68d0-MuiTypography-root"
          data-testid="standard-card-card-title-header"
          id="standard-card-card-title-header"
        >
          card title
        </h4>
      </div>
    </div>
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
      data-analyticsid="standard-card-card-title-content"
      data-testid="standard-card-card-title-content"
      id="standard-card-card-title-content"
    />
  </div>
</DocumentFragment>
`;

exports[`StandardCard component renders with square top and accent header 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
    data-testid="standard-card-card-title"
    id="standard-card-card-title"
  >
    <div
      class="MuiCardHeader-root css-dc7lih-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
      >
        <h3
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
          data-testid="standard-card-card-title-header"
          id="standard-card-card-title-header"
        >
          card title
        </h3>
      </div>
    </div>
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
      data-analyticsid="standard-card-card-title-content"
      data-testid="standard-card-card-title-content"
      id="standard-card-card-title-content"
    />
  </div>
</DocumentFragment>
`;

exports[`StandardCard component renders with title and help button 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
    data-testid="standard-card-card-title"
    id="standard-card-card-title"
  >
    <div
      class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
      >
        <h3
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
          data-testid="standard-card-card-title-header"
          id="standard-card-card-title-header"
        >
          card title
        </h3>
      </div>
      <div
        class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
      >
        <button
          aria-label="Click for more information"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-whz9ym-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="help-icon"
          data-mui-internal-clone-element="true"
          data-testid="help-icon"
          id="help-icon"
          tabindex="0"
          type="button"
        >
          <svg
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-16iszhv-MuiSvgIcon-root"
            data-testid="HelpOutlineIcon"
            focusable="false"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
            />
            <title>
              Click for more information
            </title>
          </svg>
        </button>
      </div>
    </div>
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
      data-analyticsid="standard-card-card-title-content"
      data-testid="standard-card-card-title-content"
      id="standard-card-card-title-content"
    />
  </div>
</DocumentFragment>
`;

exports[`StandardCard component renders with title and no help icon 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
    data-testid="standard-card-card-title"
    id="standard-card-card-title"
  >
    <div
      class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
      >
        <h3
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
          data-testid="standard-card-card-title-header"
          id="standard-card-card-title-header"
        >
          card title
        </h3>
      </div>
    </div>
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
      data-analyticsid="standard-card-card-title-content"
      data-testid="standard-card-card-title-content"
      id="standard-card-card-title-content"
    />
  </div>
</DocumentFragment>
`;
